@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-19T08:11:52Z",
+  "timestamp" : "2022-09-22T08:09:44Z",
   "count_outdated" : 76,
   "uniques_outdated" : 63,
-  "count" : 81,
-  "uniques" : 68,
+  "count" : 82,
+  "uniques" : 69,
   "clones" : [
     {
       "timestamp": "2022-09-11T00:00:00Z",
@@ -35,6 +35,13 @@
     },
     {
       "timestamp": "2022-09-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
