@@ -1,3 +1,11 @@
+2022-09-22T08:09:44Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3103829030
+* notice: last 14d: unq all: 1 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 63 76 / 68 81
+* notice: next accum: outdated-unq outdated-all / unq all: 63 76 / 69 82
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-22]
+
 2022-09-19T08:11:52Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3080864326
 * notice: last 14d: unq all: 1 5
